# ai-avatar-video-generation

./: .gitignore  README.md  caption_gen.py  face_enhancer.py  install_latentsync.sh  latentsync_infer.py  make_video.py  musetalk_infer.py  pyproject.toml  requirements.txt  setup.sh  test_full_pipeline.sh  test_musetalk.sh  test_phase2.sh  video_assembler.py  voice_gen.py
app/: dashboard.py
avatarpipeline/: __init__.py  pipeline.py
avatarpipeline/lipsync/: __init__.py  latentsync.py  musetalk.py  sadtalker.py
avatarpipeline/narration/: __init__.py  composer.py  presenter.py  slide_renderer.py  validator.py
avatarpipeline/podcast/: __init__.py  composer.py
avatarpipeline/postprocess/: assembler.py  captions.py  enhancer.py
avatarpipeline/voice/: __init__.py  kokoro.py  mlx_voice.py
configs/: musetalk_avatar.yaml  settings.yaml
data/avatars/no-background/: 20260420_final-version.pptx
data/voices/abhijeet-anand-japanese/: profile.json
data/voices/elon-musk-2/: profile.json
doc/: GOOGLE_DESIGN_REVIEW.md  PIPELINE.md
install/: setup.sh
scripts/: __init__.py  free_memory.sh  run_dashboard.py  run_pipeline.py  smoke_test.sh
src/avatarpipeline/: __init__.py
temp/: _latentsync_runner.py
tests/: test_mlx_voice.py  test_narration.py  test_pipeline.py
tests/integration/: test_avatar_pipeline.py
tests/unit/: test_config.py  test_media_utils.py  test_narration_validator.py  test_pipeline.py  test_voice_mlx.py
tools/: build_composites.py  gfpgan_runner.py
ui/: __init__.py  dashboard.py  dashboard.py.bak  dashboard_v1.py
(+22 files in other folders)
